10.9.0 (Oct XX, 2019)
 - Added setting core.IPAddressesEnabled to disable reporting IP Addresses and Machine name back to Split cloud.
 - Updated Redis storage to fetch multiple splits at once for getTreatments/getTreatmentsWithConfig.
 - Updated most dependencies to their latest versions. Biggest change is babel (from 6 to 7), Webpack 3 to 4, Karma and ioredis.

10.8.4 (Sep 24, 2019)
 - Added module "events" as optional dependency.
 - Removed dependency on "util" module.
 - Updated transport module to use a local axios instance instead of the global one, to avoid polluting the shared one..
 - Updated input validation log when trying to get data of a non-existent split to have level WARN instead of ERROR.

10.8.3 (Sep 16, 2019)
 - Updated two default values on startup configuration for Browsers:
   - startup.readyTimeout default value went up from 1.5s to 10s.
   - startup.retriesOnFailureBeforeReady default value went up from 1.5s to 5s.
 - Updated trafficType from manager to 'localhost' when the SDK is running in localhost mode.
 - Updated polling logic to stop and restart mySegments data synchronization (on browsers) when not currently used on Splits.

10.8.2 (Jul 26, 2019)
 - Added `/src` folder to the npm package distribution for users that needs to transpile the package themselves.
 - Bugfixing - Incorrect warnings caused by TrafficType storage counter when a Split is updated for inMemory and LocalStorage mode.
 - Updated three dev dependencies to remove vulnerability warnings when running npm audit (lodash, set-value, mixin-deep).

10.8.1 (May 31, 2019)
 - Updated axios version to 0.19.0 to remove a DoS vulnerability (not affecting the SDK but worth updating).

10.8.0 (May 23, 2019)
 - Added support for optional event properties via our client.track() method. Read more in our docs!

10.7.2 (May 15, 2019)
 - Bugfixing - Fixing ES6 import syntax for LabelConstants module.

10.7.1 (May 10, 2019)