@@ -1,6 +1,6 @@
 {
   "name": "@splitsoftware/splitio",
-  "version": "10.9.0-canary.14",
+  "version": "10.9.0-canary.15",
   "description": "Split SDK",
   "files": [
     "README.md",
