@@ -1,4 +1,6 @@
 10.9.0 (Oct XX, 2019)
+ - Fetch multiple splits at once on getTreatments/getTreatmentsWithConfig.
+ - Added listener for 'unload' DOM events to push remaining impressions and events when the browser page is closed or reloaded. 
  - Added setting core.IPAddressesEnabled to disable reporting IP Addresses and Machine name back to Split cloud.
  - Updated Redis storage to fetch multiple splits at once for getTreatments/getTreatmentsWithConfig.
  - Updated most dependencies to their latest versions. Biggest change is babel (from 6 to 7), Webpack 3 to 4, Karma and ioredis.
